recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: value !== is not a member of Int
	if (steps!==0) {
                 ^Spiral:5: error: not found: value lenght
		avance(lenght);
                       ^Spiral:8: error: not found: value lenght
		lenght==lenght+3;
                ^